Added Creative tab Added blocks

--- a/src/main/resources/assets/crimsonutils/lang/en_us.json
+++ b/src/main/resources/assets/crimsonutils/lang/en_us.json
@@ -4,5 +4,10 @@
   "item.crimsonutils.gem_citrine": "Citrine",
   "item.crimsonutils.coin_copper": "Copper Coin",
   "item.crimsonutils.coin_gold": "Gold Coin",
-  "item.crimsonutils.coin_silver": "Silver Coin"
+  "item.crimsonutils.coin_silver": "Silver Coin",
+
+  "block.crimsonutils.block_citrine": "Citrine Block",
+  "block.crimsonutils.ore_citrine": "Citrine Ore",
+
+  "itemGroup.crimsonutilstab": "Crimson Utilities"
 }
